# Portfolio

./: .gitignore  README.md
spreadsheet/: README.md
spreadsheet/spreadsheet/: CMakeLists.txt  FormulaAST.cpp  cell.cpp  cell.h  formula.cpp  sheet.cpp  sheet.h
template-calculator/: README.md
template-calculator/cpp-calculator-master/: calculator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rational.h
transport catalogue/: README.md
transport catalogue/transport-catalogue/: domain.cpp  domain.h  geo.h  json_builder.cpp  json_builder.h  json_reader.h  map_renderer.cpp  svg.h  transport_catalogue.cpp
transport-catalogue/transport-catalogue/: geo.cpp  json_reader.cpp  main.cpp  map_renderer.h  transport_catalogue.h  transport_router.cpp  transport_router.h
web-server/: CMakeLists.txt  Dockerfile  README.md
web-server/fix/: config.cmake
web-server/src/: collision_detector.cpp  collision_detector.h  extra_data.h  http_server.cpp  http_server.h  infrastructure.cpp  infrastructure.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  main.cpp  model.cpp  model.h  player.cpp  player.h  request_handler.cpp  request_handler.h  retire_repository.h  retire_repositoryImpl.h  tagged.h  ticker.h
web-server/tests/: collision-detector-tests.cpp  model-tests.cpp
